Fixing more responsive width for keyboard to fill up the width on mobile

--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ body {
 
 .keyboard {
 	display: grid;
-	grid-template-columns: repeat(20, minmax(auto, 1fr));
+	grid-template-columns: repeat(20, minmax(0.5em, 1.25em));
 	grid-auto-rows: 3.25em;
 	gap: 0.375em;
 	justify-content: center;
